[package]
name = "port-folio"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.26.3", features = ["all-widgets"] }
crossterm = "0.27.0"
tokio = { version = "1.48.0", features = ["full"] }
sysinfo = { version = "0.30.13", features = ["serde"] }
netstat2 = "0.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
itertools = "0.13.0"